--- a/.env
+++ b/.env
@@ -50,3 +50,14 @@ VITE_API_BASE_URL=
 
 # Vite dev proxy target for /api
 VITE_API_PROXY_TARGET=http://localhost:4000
+
+# Firebase Configuration
+VITE_FIREBASE_API_KEY=AIzaSyBvRGiSWUdnZ88NsUX0EsLdnXwJk5AXVSA
+VITE_FIREBASE_AUTH_DOMAIN=app-correo-cft.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=app-correo-cft
+VITE_FIREBASE_STORAGE_BUCKET=app-correo-cft.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=140293468941
+VITE_FIREBASE_APP_ID=1:140293468941:web:5e0ac40c2587880b34f644
+
+# Default Admin
+VITE_ADMIN_EMAIL=mguzmanahumada@gmail.com
