feat: sync employees from Google Sheets to Firestore and update configuration

--- a/firebase.json
+++ b/firebase.json
@@ -30,5 +30,11 @@
         "*.local"
       ]
     }
-  ]
+  ],
+  "firestore": {
+    "database": "(default)",
+    "location": "us-central1",
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  }
 }
